--- a/app.component.html
+++ b/app.component.html
@@ -2,7 +2,7 @@
   {{title}}
 </h1>
 
- <team-detail [MemberData]="MemberData" [maindata]="TeamData" ></team-detail>
+ <team-detail class="container flex" [MemberData]="MemberData" [maindata]="TeamData" ></team-detail>
 
 
 
