--- a/hero.component.html
+++ b/hero.component.html
@@ -1,12 +1,10 @@
-
-
-<div class="right" >
-    <ul class="abc">
-        <li *ngFor="let n of gtdata">
+<div class="right">
+    <ul class="heroes">
+        <li class="badge2" *ngFor="let n of gtdata">
             <p>teamid:{{n.Tid}}</p>
- <p >  name: {{n.name}} </p>
-  <p >  email: {{n.email}} </p>
-   <p >  id: {{n.id}} </p>
+ <p>  name: {{n.name}} </p>
+ <p>  email: {{n.email}}</p>
+ <p>  id: {{n.id}} </p>
    </li>
    </ul>
    </div>
