--- a/app.component.html
+++ b/app.component.html
@@ -1,12 +1,44 @@
-<h1>
-  {{title}}
-</h1>
-
- <team-detail class="container flex" [MemberData]="MemberData" [maindata]="TeamData" ></team-detail>
-
-
-
+<div style="max-height:100%">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">ADMIN</a>
+    </div>
  
-
-
- 
+    <ul class="nav navbar-nav navbar-right">
+      
+     
+     
+       <li class="dropdown">
+        <a class="dropdown-toggle glyphicon glyphicon-user" data-toggle="dropdown" href="#" >USER
+          <span class="caret"></span></a>
+      <ul class="dropdown-menu">
+      <li><a class="glyphicon glyphicon-user" href="#">Profile</a></li>
+      <li><a class="glyphicon glyphicon-envelope" href="#">Inbox</a></li>
+      <li><a class="glyphicon glyphicon-cog" href="#">Settings</a></li>
+      <li><a class="glyphicon glyphicon-off" href="#">Logout</a></li>
+    </ul>
+    </li>
+    </ul>
+    <ul class="navbar-form navbar-right">
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="search">
+      <div class="input-group-btn">
+      <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+      </div>
+      </div>
+      </ul>
+  </div>
+   </nav>
+<div class="row">
+    <div class="col-sm-3 ab">
+  <li type=none><a routerLink="/main" class="glyphicon glyphicon-dashboard "href="#">Dashboard</a>
+  <li type=none><a href="#">Charts</a>
+  <li type=none><a href="#">Tables</a>
+    </div>
+        <div class="col-sm-9">
+            <!--<img src="img.jpg" class="img-thumbnail" width="304" height="246">-->
+        <router-outlet></router-outlet>
+        </div>
+        </div>
+</div>
