--- a/hero.component.html
+++ b/hero.component.html
@@ -1,5 +1,5 @@
 <div class="ab ">
-    <h1 class="text-center">Member Details</h1>
+    <h1 class="text-center" style="color:white">Member Details</h1>
     <ul >
         <li type=none *ngFor="let n of gtdata">
             <a href="#"><p><span class="text-uppercase">Teamid:</span>{{n.Tid}}</p>
