--- a/app.component.html
+++ b/app.component.html
@@ -1,4 +1,5 @@
-<div style="max-height:100%">
+
+<div style="max-height:100%; overflow-y: hidden;">
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -39,6 +40,8 @@
         <div class="col-sm-9">
             <!--<img src="img.jpg" class="img-thumbnail" width="304" height="246">-->
         <router-outlet></router-outlet>
+
+        
         </div>
         </div>
 </div>
