--- a/main.component.html
+++ b/main.component.html
@@ -1,3 +1,10 @@
-<team-detail class="container flex" [MemberData]="MemberData" [maindata]="TeamData" ></team-detail>
+
+<team-detail class="container flex" [MemberData]="MemberData" [maindata]="TeamData"[arrForRefresh]="arForRefresh" ></team-detail>
+
+
+
+
+
+
        
        
